--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<link href="css/styles.css" rel="stylesheet">
 	
 	<!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/WhatsApp Image 2025-05-19 at 8.16.40 AM.jpeg">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
