--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Your description">
-    <meta name="author" content="SELVA GANESH">
+    <meta name="description" content="Sharing stories, thoughts, and passions from my world to yours">
+    <meta name="author" content="TECH SQUAD">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
 	<meta property="og:site_name" content="" /> <!-- website name -->
@@ -30,6 +30,14 @@
 	<!-- Favicon  -->
     <link rel="icon" href="images/WhatsApp Image 2025-05-19 at 8.16.40 AM.jpeg">
 </head>
+<body>
+
+    <h1>Welcome to My Website</h1>
+    <p>Here's an awesome image:</p>
+
+    <img src="" alt="Vera Yaaru NAAN THAAN" width="500">
+
+</body>
 <body data-spy="scroll" data-target=".fixed-top">
     
     <!-- Navigation -->
