--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>PALM TECHKES</title>
+    <title>PALM TECHKiES</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -35,7 +35,7 @@
     <h1>Welcome to My Website</h1>
     <p>Here's an awesome image:</p>
 
-    <img src="" alt="Vera Yaaru NAAN THAAN" width="500">
+    <img src="images/What.jpeg" alt="Vera Yaaru NAAN THAAN" width="500">
 
 </body>
 <body data-spy="scroll" data-target=".fixed-top">
