--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <h1>Welcome to My Website</h1>
-    <p>Here's an awesome image:</p>
+    <p>Vera Yaaru NAAN THAAN ; </p>
 
     <img src="images/What.jpeg" alt="Vera Yaaru NAAN THAAN" width="500">
 
